--- a/style.css
+++ b/style.css
@@ -87,12 +87,20 @@ video {
 
 /* Progress Bar */
 .progress-range {
+  height: 8px;
+  width: calc(100% - 30px);
+  background: rgba(204, 204, 204, 0.5);
   margin: auto;
   border-radius: 10px;
   position: absolute;
   left: 15px;
   top: 15px;
   cursor: pointer;
+  transition: height 0.1s ease-in-out;
+}
+
+.progress-range:hover {
+  height: 10px;
 }
 
 .progress-bar {
